--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -130,7 +130,7 @@
   line-height: 1.25;
   margin: 0;
 }
-.footer {
+.page_footer {
   margin-top: 130px;
 }
 @media (min-width: 768px) {
