--- a/assets/css/find-guest-order.css
+++ b/assets/css/find-guest-order.css
@@ -71,7 +71,7 @@ main {
   background-color: #f4e0e0;
   border: 1px solid red;
 }
-.footer {
+.page_footer {
   margin-top: 72px;
 }
 @media (min-width: 768px) {
@@ -135,7 +135,7 @@ main {
   .other_auth_options .signup_anchor {
     font-size: 16px;
   }
-  .footer {
+  .page_footer {
     margin-top: 140px;
   }
 }
