--- a/assets/css/order-details.css
+++ b/assets/css/order-details.css
@@ -280,7 +280,7 @@ p {
 .order-tracking-text {
   font-weight: 400;
 }
-.footer {
+.page_footer {
   margin-top: 105px;
 }
 
