--- a/assets/css/payment-status.css
+++ b/assets/css/payment-status.css
@@ -58,7 +58,7 @@ p {
   max-width: 275px;
   margin-left: auto;
 }
-.footer {
+.page_footer {
   margin-top: 105px;
 }
 
